protocols/tests/counters/counter.out
error: `dut.a` is a input field of the struct `dut`, but only output fields are allowed to appear in conditions in if-statements / while-loops)
   ┌─ counters/counter.prot:16:22
   │
16 │     while !(dut.s == dut.a) {
   │                      ^^^^^ `dut.a` is a input field of the struct `dut`, but only output fields are allowed to appear in conditions in if-statements / while-loops)

